ghc-4335c07/testsuite/tests/typecheck/should_compile/T10494.hs
module App where

import Data.Coerce

foo :: Coercible (a b) (c d) => a b -> c d
foo = coerce
